Finally got the hang of this

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,12 @@
 title: Super Laser Cat
 author: Ian Blackledge
 description: ""
+
+include:
+  - _pages
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
