--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,10 +14,10 @@ defaults:
       path: "_pages"
       type: "pages"
     values:
-      permalink: /:basename
+      permalink: :basename
   - scope:
       path: "_posts"
       type: "posts"
     values:
       layout: grid
-      permalink: /:categories/:short_year-:i_month-:i_day-:title
+      permalink: :categories/:short_year-:i_month-:i_day-:title
